--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/eslint-parser": "^7.16.5",
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
-    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.0",
     "browser-sync": "^2.24.7",
     "browser-sync-webpack-plugin": "^2.2.2",
@@ -29,7 +29,7 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "phaser": "3.12.0",
+    "phaser": "3.55.2",
     "phaser-animated-tiles": "^2.0.2"
   }
 }
