--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "babel-loader": "^8.0.0",
-    "browser-sync": "^3.0.2",
+    "browser-sync": "3.0.3",
     "browser-sync-v3-webpack-plugin": "^0.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.2.0",
